tests/NormalTests/paczka2/big_fuzzy/84221059.err
Error in line 2: A899 S66 60,5
Error in line 3: A899 A909 44,6
Error in line 13: 6r38OBoP S66 46,2
Error in line 18: 6r38OBoP A909 31,5
Error in line 19: 6r38OBoP S66 26,8
Error in line 22: nFksttJP9LO A909 69,0
Error in line 28: A899 A909 3,1
Error in line 34: 6r38OBoP S66 65,7
Error in line 46: A899 A554 97,4
Error in line 10: kMZB0 A909 230,5
Error in line 55: 6r38OBoP A554 73,7
Error in line 60: sgQ8 A8)) 36,4
Error in line 56: 6r38OBoP S66 57,0
Error in line 51: sgQ8 S66 3,7
Error in line 65: sgQ8 A909 36,3
Error in line 75: 6r38OBoP A554 32,5
Error in line 78: nFksttJP9LO A554 80,4
Error in line 81: nFksttJP9LO S66 31,6
Error in line 87: sgQ8 A554 98,5
Error in line 54: rDxbk A899 22,2
Error in line 92: rDxbk A909 70,9
Error in line 96: lvRJOe1 A899 -4,0
Error in line 79: lvRJOe1 A899 79,7
Error in line 95: A899 A899 78,6
Error in line 99: lvRJOe1 A909 85,4
Error in line 100: A899 A554 10,8
Error in line 122: kMZB0 S66 275,9
Error in line 129: kMZB0 A899 8,0
Error in line 135: A899 S66 23,6
Error in line 140: nFksttJP9LO A899 54,2
Error in line 152: lvRJOe1 A909 64,2
Error in line 149: kMZB0 A899 42,5
Error in line 162: A899 S66 344,84
Error in line 163: 6r38ÝBoP A554 32,9
Error in line 160: A899 S66 82,6
Error in line 168: lvRJOe1 A554 84,1
Error in line 169: lvRJOe1 A909 76,4
Error in line 171: A899 A899 82,48
Error in line 173: nFksttJP9LO S66 50,1
Error in line 170: lvRJOe1 A899 377,9
Error in line 181: rDxbk A899 38,6
Error in line 185: rDxbk A909 282,51
Error in line 165: A899 A554 1,0
Error in line 184: rDxbk A909 90,7
Error in line 204: sgQ8 A909 58,4
Error in line 215: kMZB0 A899 12,5
Error in line 212: A899 A899 67,7
Error in line 221: A899 S66 6,7
Error in line 218: sgQ8 S66 0,2
Error in line 203: lvRJOe1 A899 22,8
Error in line 231: nFksttJP9LO S66 4,4
Error in line 230: kMZB0 S66 75,0
Error in line 236: lvRJOe1 A554 31,5
Error in line 245: lvRJOe1 A909 17,2
